--- a/scss/main/_archive.scss
+++ b/scss/main/_archive.scss
@@ -27,6 +27,7 @@
     flex-basis: 50%;
     h3 {
         margin-bottom: 5px;  
+        letter-spacing: normal;
     }
     p {
         margin-bottom: 5px;
