--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -192,7 +192,7 @@ svg {
         display: grid; 
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;//400px 400px;
-        // height: 100vh;
+        height: 100vh;
     }
 }
 
