--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -114,7 +114,7 @@ a {
     justify-content: space-between;
     height: 400px; 
     // max-width: 315px;
-    background: linear-gradient(90deg, rgba(162,255,209,1) 0%, rgba(131,255,255,1) 50%, rgba(250,176,255,1) 100%), url('https://previews.dropbox.com/p/thumb/ABMjxDWoTXqcLBJ26dQAlZ7ZrzkYNT085HTsJuP6fKHkBw1SOhc23PA0C88awbDAs35oAXg8XopgrJDapQUP6M64WmLNkHJOW3eDCu0d1eAel8p5mGGXRakhoyglcrbd5iEs-20sybX3IS0JzeIhF09vF6nC5iVaPVTRsszxqvLVmO-0009F-Y7Jvv1WVElR5LmyuWe4Gjdf0OPPWvI9F1z4-Isy_Y9AqIggGnDnjmLGO7XL5GBgklNfd1KPiHrPc7UhTdG6XUVtS9-G9bdD_k_SycF1Pmbiyav3vOmFcv6FUux4d7lsnSpTMy18S8p3G8zjJxnHetsYZYcTcBNnTAUif0CW7yNt-NWtQDA2uTPQi4f-W9pEK_bCJPc1vMlqPwu_goUxciZVEUNUZ1SimuuBobe9w24UqHaLQJU_FJQjnwzzodPfRxhPtOS0ck0jPXw/p.jpeg?fv_content=true&size_mode=5');
+    background: linear-gradient(90deg, rgba(162,255,209,1) 0%, rgba(131,255,255,1) 50%, rgba(250,176,255,1) 100%), url('../../img/IMG_0195.JPG');
     background-blend-mode: overlay;
     background-size: cover;
     //border-radius: 10px;
@@ -184,6 +184,18 @@ svg {
     h1 {
         font-size: 1.7rem;
     }
+}
+
+.archive-cube, 
+.cube {
+    a {
+        text-align: center;
+    }
+}
+
+.archive-cube {
+    a {font-size: .8rem;}
+    
 }
 
 
