--- a/scss/main/_contact.scss
+++ b/scss/main/_contact.scss
@@ -67,11 +67,12 @@
     h3 {
         position: relative;
         margin-bottom: 10px;
-        letter-spacing: 1.2rem;
+        letter-spacing: .7rem;
         padding-left: 5px;
-        border-left: 5rem solid white;
+        border-left: 3rem solid white;
         @media screen and (min-width: 768px) {
-            border-left: 10rem solid white;
+            border-left: 7rem solid white;
+            letter-spacing: 1.2rem;
         }
         transition: border-left .5s ease, color .5s ease;
         &:after {
