--- a/scss/main/_archive.scss
+++ b/scss/main/_archive.scss
@@ -20,6 +20,7 @@
     width: 100%; 
     justify-content: center;
     transition: width 10s ease-in-out;
+    margin-bottom: 20px;
     // border-bottom: 1px solid white;
 }
 
