--- a/scss/main/_footer.scss
+++ b/scss/main/_footer.scss
@@ -4,15 +4,12 @@ footer {
     width: 100%;
     justify-content: flex-end;
     margin-top: 20px;
-    // margin-bottom: 100px;
+    height: 100px;
 }
 
 .color-block {
     display: flex;
-    // width: 20%;
     height: 20px;
-    //border: 5px solid lighten($col-outlines, 15%);
-    // background-color: $col-primary;
 }
 
 .block {
