--- a/scss/main/_archive.scss
+++ b/scss/main/_archive.scss
@@ -87,7 +87,7 @@
 @media  screen and (min-width: 768px) {
     .archive-grid {
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(3, 200px);
+        // grid-template-rows: repeat(3, 200px);
         height: 100vh;
         @media screen and (max-height: 660px) {
             overflow-y: scroll;
@@ -98,6 +98,7 @@
         grid-column-start: span 3;
         flex-direction: row;
         max-height: 200px;
+        margin-top: 20px;
     }
 
     .site-buttons {
