--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -233,6 +233,7 @@ svg {
     .my-card {
         grid-area: personal-card;
         background: linear-gradient(90deg, rgba(162,255,209,1) 0%, rgba(131,255,255,1) 50%, rgba(250,176,255,1) 100%), url(../../img/profile-lg.jpg);
+        background-position-y: -300px;
     }
 
     .site-nav {
