--- a/css/styles.css
+++ b/css/styles.css
@@ -1123,9 +1123,29 @@ footer {
   display: flex;
   flex-direction: row;
   width: 100%;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin-top: 20px;
   height: 100px;
+}
+
+.back-to-top {
+  border: 1px solid white;
+  color: white;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.7;
+  font-size: 0.8rem;
+  transition: color 0.5s ease, background-color 0.5s ease, opacity 0.5s ease;
+}
+.back-to-top p {
+  padding: 7px;
+}
+.back-to-top:hover {
+  color: black;
+  background-color: white;
+  opacity: 1;
 }
 
 .color-block {
@@ -1140,30 +1160,64 @@ footer {
 
 .block-one {
   background-color: #a2ffd1;
-  width: 10px;
+  width: 5px;
 }
 
 .block-two {
   background-color: #83ffff;
-  width: 50px;
+  width: 25px;
 }
 
 .block-three {
   background-color: #fab0ff;
+  width: 30px;
 }
 
 .block-four {
   background-color: #404040;
-  width: 25px;
+  width: 15px;
 }
 
 .block-five {
   background-color: #121212;
+  width: 30px;
 }
 
 .block-six {
   background-color: white;
-  width: 25px;
+  width: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .block-one {
+    background-color: #a2ffd1;
+    width: 10px;
+  }
+
+  .block-two {
+    background-color: #83ffff;
+    width: 50px;
+  }
+
+  .block-three {
+    background-color: #fab0ff;
+    width: 100px;
+  }
+
+  .block-four {
+    background-color: #404040;
+    width: 25px;
+  }
+
+  .block-five {
+    background-color: #121212;
+    width: 100px;
+  }
+
+  .block-six {
+    background-color: white;
+    width: 25px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
