--- a/scss/main/_footer.scss
+++ b/scss/main/_footer.scss
@@ -7,7 +7,7 @@ footer {
     height: 100px;
 }
 
-.back-to-top {
+#back-to-top {
     border: 1px solid white; 
     color: white;
     height: 20px;
