--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -80,17 +80,6 @@ a {
         a:hover {
             color: black;
         }
-        // li {
-        //     padding: 7px; 
-        //     border: 1px solid $col-text;
-        //     color: white;
-        //     font-weight: 600;
-        //     transition: background-color .5s ease-in, color .5s ease-in;
-        //     &:hover {
-        //         color: black;
-        //         background-color: $col-text;
-        //     }
-        // }
         .home {
             margin-right: 10px;
         }
@@ -135,6 +124,7 @@ a {
     height: 400px; 
     background: linear-gradient(90deg, rgba(162,255,209,1) 0%, rgba(131,255,255,1) 50%, rgba(250,176,255,1) 100%), url(../../img/profile-sm.jpg);
     background-blend-mode: overlay;
+    background-position-y: -200px;
     background-size: cover;
     padding: 10px;
     position: relative; 
@@ -233,7 +223,8 @@ svg {
     .my-card {
         grid-area: personal-card;
         background: linear-gradient(90deg, rgba(162,255,209,1) 0%, rgba(131,255,255,1) 50%, rgba(250,176,255,1) 100%), url(../../img/profile-lg.jpg);
-        background-position-y: -300px;
+        background-position-y: -900px;
+        background-position-x: 650px;
     }
 
     .site-nav {
