--- a/scss/main/_footer.scss
+++ b/scss/main/_footer.scss
@@ -2,7 +2,7 @@ footer {
     display: flex; 
     flex-direction: row;
     width: 100%;
-    justify-content: space-between;
+    justify-content: flex-end;
     margin-top: 20px;
     height: 100px;
 }
